--- a/packages/pkg_common_ui/pubspec.yaml
+++ b/packages/pkg_common_ui/pubspec.yaml
@@ -1,16 +1,16 @@
 ---
 name: pkg_common_ui
-publish_to: none
+resolution: workspace
+
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ^3.9.0
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: 2.0.17
-
-dev_dependencies:
-  build_runner: 2.4.14
+  flutter_svg: 2.2.1
+  pkg_localizations:
+    path: packages/pkg_localizations
 
 flutter:
   uses-material-design: true
