--- a/packages/pkg_localizations/pubspec.yaml
+++ b/packages/pkg_localizations/pubspec.yaml
@@ -1,15 +1,16 @@
 ---
 name: pkg_localizations
-publish_to: none
+resolution: workspace
+
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ^3.9.0
 
 dependencies:
-  slang: 4.4.1
+  slang: 4.9.2
 
 dev_dependencies:
-  build_runner: 2.4.14
-  slang_build_runner: 4.4.2
+  build_runner: 2.10.1
+  slang_build_runner: 4.9.0
 
 flutter:
   uses-material-design: true
