--- a/packages/pkg_user/pubspec.yaml
+++ b/packages/pkg_user/pubspec.yaml
@@ -1,14 +1,15 @@
 ---
 name: pkg_user
-publish_to: none
+resolution: workspace
+
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ^3.9.0
 
 dependencies:
-  injectable: 2.5.0
-  get_it: 8.0.3
+  injectable: 2.5.2
+  get_it: 8.2.0
   path_provider: 2.1.5
-  fpdart: 1.1.1
+  fpdart: 1.2.0
   equatable: 2.0.7
   loggy: 2.0.3
 
@@ -16,8 +17,8 @@ dependencies:
     path: ../pkg_common_api
 
 dev_dependencies:
-  build_runner: 2.4.14
-  injectable_generator: 2.7.0
+  build_runner: 2.10.1
+  injectable_generator: 2.9.0
 
 flutter:
   uses-material-design: true
